--- a/react-app-starter-master/package.json
+++ b/react-app-starter-master/package.json
@@ -56,6 +56,7 @@
     },
     "dependencies": {
         "@progress/kendo-react-buttons": "^5.10.0",
+        "@progress/kendo-react-editor": "^5.10.1",
         "@progress/kendo-react-form": "^5.10.0",
         "@progress/kendo-react-inputs": "^5.10.0",
         "@progress/kendo-react-labels": "^5.10.1",
@@ -80,5 +81,9 @@
         "node": ">=8.0.0",
         "npm": ">=6.0.0",
         "yarn": ">=1.0.0"
-    }
+    },
+    "typeRoots": [
+        "node_modules/@types",
+        "node_modules/@progress"
+    ]
 }
